--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.6</version>
+        <version>2.7.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>ru.live</groupId>
-    <artifactId>RecipesApp</artifactId>
+    <groupId>me.Vova</groupId>
+    <artifactId>MavenWork1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>RecipesApp</name>
-    <description>RecipesApp</description>
+    <name>MavenWork1</name>
+    <description>MavenWork1</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -21,12 +21,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.13</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
